@@ -81,6 +81,9 @@ $config['managesieve_filename_exceptions'] = array();
 // If not empty, user will need to select domain from a list
 $config['managesieve_domains'] = array();
 
+// Default list of entries in header selector
+$config['managesieve_default_headers'] = array('Subject', 'From', 'To');
+
 // Enables separate management interface for vacation responses (out-of-office)
 // 0 - no separate section (default),
 // 1 - add Vacation section,
